k8s/platform/dev/services/keycloak/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polar-keycloak
  labels:
    app: polar-keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polar-keycloak
  template:
    metadata:
      labels:
        app: polar-keycloak
    spec:
      containers:
        -   name: polar-keycloak
            image: quay.io/keycloak/keycloak:22.0.3
            args: ["start-dev --import-realm"]
            ports:
              -   containerPort: 80
            volumeMounts:
              - mountPath: /opt/keycloak/data/import
                name: polar-keycloak
            readinessProbe:
              httpGet:
                path: /realms/master
                port: 80
      volumes:
        - name: polar-keycloak
          configMap:
            name: keycloak-config
---
