k8s/platform/dev/services/keycloak/service.yml
apiVersion: v1
kind: Service
metadata:
  name: polar-keycloak
  labels:
    app: polar-keycloak
spec:
  type: ClusterIP
  selector:
    app: polar-keycloak
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
---
