k8s/platform/dev/services/keycloak/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polar-keycloak-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: "polar-keycloak"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: polar-keycloak
                port:
                  number: 80
---
